Document the process.